# modern_cpp_examples

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CompilerPrintType/: CMakeLists.txt  README.md  compiler_print_type.cpp
DeletedFunction/: CMakeLists.txt  README.md  deleted_function.cpp
EnumClass/: CMakeLists.txt  README.md  enum_class.cpp
ImmediatelyInvokedFunctionExpression/: CMakeLists.txt  README.md  iife.cpp
Lambda/: CMakeLists.txt  README.md  lambda.cpp
Nullptr/: CMakeLists.txt  README.md  nullptr.cpp
TypeId/: CMakeLists.txt  README.md  typeid  typeid.cpp
UniformInitialization/: CMakeLists.txt  README.md  uniform_initialization.cpp
