cmake_minimum_required(VERSION 3.16.3)
project(modern_cpp_examples LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 14)
set(CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_FLAGS_DEBUG "-g")

add_subdirectory(CompilerPrintType)
add_subdirectory(DeletedFunction)
add_subdirectory(EnumClass)
add_subdirectory(ImmediatelyInvokedFunctionExpression)
add_subdirectory(Lambda)
add_subdirectory(Nullptr)
add_subdirectory(TypeId)
add_subdirectory(UniformInitialization)
